# MathLib

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
src/: AdvancedOperations.cpp  AdvancedOperations.h  BasicOperations.cpp  BasicOperations.h
tests/: AdvancedOperationsTests.cpp  BasicOperationsTests.cpp  test.cpp
